# AI-prototype-for-playing-dominoes

./: IMPLEMENTATION.md  README.md  article.tex  pyproject.toml
results/: benchmark_matches.csv  benchmark_moves.csv  benchmark_report.json  benchmark_summary.csv
results_tmp/: benchmark_matches.csv  benchmark_moves.csv  benchmark_report.json  benchmark_summary.csv
scripts/: play_cli.py  run_tournament.py
src/agents/: players.py
src/ai/: heuristics.py  minimax.py
src/ai_dominoes_prototype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/benchmarking/: __init__.py  analytics.py
src/game/: domino.py  engine.py  rules.py  state.py
tests/: test_minimax.py  test_rules.py
